--- a/index (1).html
+++ b/index (1).html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>第1課～第3課 自選單字練習</title>
+  <title>第1～3課 自選單字練習</title>
   <style>
     body {
       font-family: "Helvetica Neue", sans-serif;
@@ -58,11 +58,11 @@
   </style>
 </head>
 <body>
-  <h1>第1～3課 自選單字練習</h1>
+  <h1>第7～9課 自選單字練習</h1>
 
   <div>
     題目方向：
-    <select id="modeSelect" onchange="changeMode()">
+    <select id="modeSelect">
       <option value="jpToZh">日文 ➡ 中文（預設）</option>
       <option value="zhToJp">中文 ➡ 日文</option>
     </select>
@@ -70,7 +70,7 @@
 
   <div>
     題型選擇：
-    <select id="typeSelect" onchange="changeType()">
+    <select id="typeSelect">
       <option value="choice">選擇題（預設）</option>
       <option value="input">打字題</option>
     </select>
@@ -78,7 +78,7 @@
 
   <div>
     選擇課次：
-    <select id="lessonSelect" onchange="updateWordList()">
+    <select id="lessonSelect">
       <option value="">-- 請選擇課次 --</option>
       <option value="第1課">第1課</option>
       <option value="第2課">第2課</option>
@@ -86,7 +86,24 @@
     </select>
   </div>
 
-   <div id="endScreen" style="display: none; margin-top: 20px; text-align: center;">
+  <div id="wordSelection"></div>
+  <button onclick="startQuiz()">▶️ 開始測驗</button>
+  <button onclick="unlockSelection()">🔁 重新選單字</button>
+
+  <div id="quizArea">
+    <div id="question">← 點上方按鈕開始練習</div>
+    <div id="options"></div>
+    <div id="result"></div>
+    <div>
+      分數：<span id="score">0</span><br>
+      最高分：<span id="highscore">0</span><br>
+      答對率：<span id="accuracy">0%</span>（<span id="correct">0</span> / <span id="total">0</span> 題）
+    </div>
+    <button onclick="speakWord()">🔊 朗讀日文</button>
+    <button onclick="resetScore()">🔁 重置分數</button>
+  </div>
+
+  <div id="endScreen" style="display: none; margin-top: 20px; text-align: center;">
     <h3>🎉 測驗完成！</h3>
     <p>你的總得分是：<span id="finalScore">0</span> 分</p>
     <button onclick="goHome()">🔙 回首頁</button>
@@ -102,7 +119,6 @@
     <button onclick="clearHistory()">🗑 清除紀錄</button>
     <button onclick="hideHistory()">❌ 關閉</button>
   </div>
-
 
   <script>
     const allLessons = {
